# ChangeLog for app-emacs/vm
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*vm-9999 (30 Dec 2007)

  30 Dec 2007; Ulrich Mueller <ulm@gentoo.org> +files/50vm-gentoo.el,
  +files/vm-no-pcrisis.patch, +metadata.xml, +vm-9999.ebuild:
  Live bzr ebuild. Drop ~alpha keyword due to missing dev-util/bzr.
