@@ -1,5 +1,5 @@
 AUX 50vm-gentoo.el 204 RMD160 001be5dd6bc7df28d462c1666cbab2430284e8a3 SHA1 4cc181949327153f59685363cfda444fc1ca7285 SHA256 3607813ee9ddf6d1a1de285cc71f9e0cbceccf6caf67ece1fe205e3180953048
 AUX vm-no-pcrisis.patch 620 RMD160 9615e5574f955718ae8fe375afb6bc91dded4d54 SHA1 ea87f99aec9d6b03318e58b6197412745fafee4f SHA256 2c343d31649a152791f31bf14e8ee3d7a849e5645ba028661ab84309f73a5886
-EBUILD vm-9999.ebuild 1144 RMD160 a9ce4982e85e631c9a9d366a71f8f3da2a4da8a1 SHA1 220fe1b9145855000feb2e3a885aaf98595cfadd SHA256 4912ba219dea387966fbed09ed29be0a97a4a0eb4e4d0911b7a52633bf0e8f5b
-MISC ChangeLog 338 RMD160 c2cebdef05c65f472d52df92340bb2d10d435439 SHA1 9236625aca394489ff46c799806e366e321fb0a4 SHA256 dedd4be71684f8c9cf73ec966e8bf1fae1403b6758db52a04622d03c49bd5b41
+EBUILD vm-9999.ebuild 1109 RMD160 2c079519ddea99db4207d547d163122f73826f79 SHA1 c2156e7fcceaf314c0805514a20044093f5b9074 SHA256 5654a4c683d678819ca3fcbfb2c9be685ace2da60e6622e7212efc9ab6201d08
+MISC ChangeLog 439 RMD160 987504db0ccc556dcf0c2d0b7902ba5da0c7ceb6 SHA1 e0f428b03431275174cc2641421df34cfed8a3ab SHA256 d3262bce085174efab76a2518bb2a08d487125ee00d1359c471cd2f1479651ce
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
